--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ DerivedData
 *.xcuserstate
 *~
 .DS_Store
+*.pbxproj
 # CocoaPods
 #
 # We recommend against adding the Pods directory to your .gitignore. However
