--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ DerivedData
 *~
 .DS_Store
 *.pbxproj
-# CocoaPods
+!myOrgForums.pbxproj
 #
 # We recommend against adding the Pods directory to your .gitignore. However
 # you should judge for yourself, the pros and cons are mentioned at:
